<resources>
    <string name="app_name">sticky</string>
    <!-- splash -->
    <string name="splash_description">“Sticky”는 집에서 사용하는 챌린지 서비스입니다. 집 위치를 설정하기 위해 위치정보 사용을 동의해주세요!</string>
    <string name="splash_set_gps_permission">위치정보 설정하기</string>

    <!-- main -->
    <string name="main_can_not_start_challenge">집에서만 시작할 수 있어요</string>
    <string name="main_show_more">더보기</string>
    <string name="main_start">시작하기</string>
    <string name="main_share">공유하기</string>
    <string name="main_go_out">외출하기</string>

    <!-- dialog -->
    <string name="dialog_terminate_challenge_title">챌린지 종료</string>
    <string name="dialog_terminate_challenge_description">챌린지가 00때문에 종료되었습니다.\n최종 기록을 공유할까요?</string>
    <string name="dialog_exit_challenge_title">챌린지 종료하기</string>
    <string name="dialog_exit_challenge_description">지금까지의 연속기록이 사라집니다! 정말 챌린지를 종료하실건가요?</string>
    <string name="dialog_change_address_title">주소 변경하기</string>
    <string name="dialog_change_address_description">주소를 변경하면 지금까지 쌓은 모든 기록이 사라집니다. 정말 주소를 변경하고 새로 시작하시겠어요?</string>
    <string name="dialog_share">공유하기</string>
    <string name="dialog_exit">종료하기</string>
    <string name="dialog_cancel">취소하기</string>

    <!-- map -->
    <string name="map_set_home">집으로 설정하기</string>
    <string name="map_reset_address"><u>여기가 아닌가요?</u></string>

    <!-- address -->
    <string name="address_main_txt">주소를 입력해주세요</string>
    <string name="address_input_txt_hint">도로명, 건물명 또는 지번으로 검색</string>
    <string name="address_find_txt">현재 위치로 주소 찾기</string>
    <string name="address_guide_txt1">- 도로명 + 건물번호 </string>
    <string name="address_guide_txt2"> (예 : 강남대로 570)</string>
    <string name="address_guide_txt3">- 동/읍/면/리 + 번지 </string>
    <string name="address_guide_txt4"> (예 : 신천동 42)</string>
    <string name="address_guide_txt5">- 건물명, 아파트명 </string>
    <string name="address_guide_txt6"> (예 : 반포자이아파트)</string>
    <string name="address_tip_txt">Tip</string>
    <string name="address_no_search_result_txt">검색 결과가 없습니다. \n 지번, 도로, 건물명을 입력해주세요.</string>
    <string name="address_warn_txt">이후에 주소를 수정하면 모든 기록이 초기화됩니다.</string>

    <!-- my page -->
    <string name="my_page_level_info"><u>등급정보</u></string>
    <string name="my_page_next_level_remaining">다음 레벨까지 %1$d 남았습니다</string>

    <string name="my_page_title">마이페이지</string>
    <string name="my_page_special_title">스페셜 기록</string>
    <string name="my_page_special_description">특별한 기록을 달성하면 받을 수 있어요</string>
    <string name="my_page_monthly_title">월간 기록</string>
    <string name="my_page_monthly_description">한달 내에 쌓은 시간을 기준으로 합니다.</string>
    <string name="my_page_continuous_title">연속 기록</string>
    <string name="my_page_continuous_description">멈추지 않고 이어서 기록된 시간을 기준으로 합니다.</string>

    <string name="view_more_title">더보기</string>
    <string name="view_more_change_home_address">주소 변경</string>
    <string name="view_more_about_sticky">스티키에 대해서</string>
    <string name="view_more_version_info">버전정보</string>
    <string name="view_more_open_source_licence">오픈소스 라이센스</string>

</resources>