<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="vm"
                type="com.nexters.sticky.ui.mypage.MyPageViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_white"
            android:orientation="vertical">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayscale_gray_200" />

        <RelativeLayout
                android:id="@+id/change_home_address_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <TextView
                    style="@style/Text.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/view_more_change_home_address" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_icon_arrow_right_dim" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/about_sticky_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <TextView
                    style="@style/Text.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/view_more_about_sticky" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_icon_arrow_right_dim" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/version_info_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <TextView
                    style="@style/Text.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/view_more_version_info" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_icon_arrow_right_dim" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/open_source_license_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <TextView
                    style="@style/Text.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/view_more_open_source_licence" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_icon_arrow_right_dim" />
        </RelativeLayout>
    </LinearLayout>
</layout>
