<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="vm"
                type="com.nexters.sticky.ui.address.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <LinearLayout
                android:id="@+id/top_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/address_background_recycler_bottom"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/address_main_txt"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/find_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/address_input_backgound"
                    android:focusable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_txt">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/address_edittxt"
                        android:layout_width="0dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/address_input_edittext_background"
                        android:hint="@string/address_input_txt_hint"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/search_close_btn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                        android:id="@+id/search_close_btn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/Transparency"
                        android:src="@drawable/icon_close_small"
                        android:visibility="gone"
                        app:layout_constraintEnd_toStartOf="@id/search_btn"
                        app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                        android:id="@+id/search_btn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/Transparency"
                        android:src="@drawable/icon_search"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                    android:id="@+id/find_here_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/address_find_here_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_edittxt">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/find_here_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_location_here" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/find_here_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/address_find_txt"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_content_layout">

            <TextView
                    android:id="@+id/tip_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/address_tip_txt"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:id="@+id/search_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tip_txt">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/search_guide1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt1"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    <TextView
                            android:id="@+id/search_guide2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt2"
                            android:textColor="@color/grayscale_gray_500"
                            android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/search_guide3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt3"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    <TextView
                            android:id="@+id/search_guide4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt4"
                            android:textColor="@color/grayscale_gray_500"
                            android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/search_guide5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt5"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    <TextView
                            android:id="@+id/search_guide6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_guide_txt6"
                            android:textColor="@color/grayscale_gray_500"
                            android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                    android:id="@+id/no_search_result"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:orientation="vertical"-->
            <!--                    android:gravity="center"-->
            <!--                    android:visibility="gone"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent">-->
            <!--            <androidx.appcompat.widget.AppCompatImageView-->
            <!--                    android:layout_width="132dp"-->
            <!--                    android:layout_height="132dp"-->
            <!--                    android:src="@drawable/icon_no_search_result"-->
            <!--                    />-->
            <!--                <TextView-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:gravity="center"-->
            <!--                        android:text="@string/address_no_search_result_txt"/>-->
            <!--            </LinearLayout>-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/place_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_content_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>